// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Shimmer renders Shimmer correctly 1`] = `
<div
  className=
      ms-Shimmer-container
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: auto;
        position: relative;
      }
>
  <div
    className=
        ms-Shimmer-shimmerWrapper
        {
          background-color: #f3f2f1;
          overflow: hidden;
          position: relative;
          transform: translateZ(0);
          transition: opacity 200ms;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
          -ms-high-contrast-adjust: none;
          background: WindowText
                                linear-gradient(
                                  to right,
                                  transparent 0%,
                                  Window 50%,
                                  transparent 100%)
                                0 0 / 90% 100%
                                no-repeat;
          forced-color-adjust: none;
        }
        & > div:last-child {
          transform: translateZ(0);
        }
    style={
      Object {
        "width": "50%",
      }
    }
  >
    <div
      className=
          ms-Shimmer-shimmerGradient
          {
            animation-direction: normal;
            animation-duration: 2s;
            animation-iteration-count: infinite;
            animation-name: keyframes 0%{transform:translateX(-100%);}100%{transform:translateX(100%);};
            animation-timing-function: ease-in-out;
            background: #f3f2f1
                                linear-gradient(
                                  to right,
                                  #f3f2f1 0%,
                                  #edebe9 50%,
                                  #f3f2f1 100%)
                                0 0 / 90% 100%
                                no-repeat;
            height: 100%;
            left: 0px;
            position: absolute;
            top: 0px;
            transform: translateX(-100%);
            width: 100%;
          }
    />
    <div
      className=
          ms-ShimmerElementsGroup-root
          {
            -moz-osx-font-smoothing: grayscale;
            -webkit-font-smoothing: antialiased;
            align-items: center;
            display: flex;
            flex-wrap: nowrap;
            font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
            font-size: 14px;
            font-weight: 400;
            position: relative;
          }
      style={
        Object {
          "width": "auto",
        }
      }
    >
      <div
        className=
            ms-ShimmerCircle-root
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              border-bottom-style: solid;
              border-bottom-width: 0px;
              border-color: #ffffff;
              border-top-style: solid;
              border-top-width: 0px;
              box-sizing: content-box;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 30px;
              min-width: 30px;
              width: 30px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              border-color: Window;
            }
      >
        <svg
          className=
              ms-ShimmerCircle-svg
              {
                display: block;
                fill: #ffffff;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                fill: Window;
              }
          height={30}
          viewBox="0 0 10 10"
          width={30}
        >
          <path
            d="M0,0 L10,0 L10,10 L0,10 L0,0 Z M0,5 C0,7.76142375 2.23857625,10 5,10 C7.76142375,10 10,7.76142375 10,5 C10,2.23857625 7.76142375,2.22044605e-16 5,0 C2.23857625,-2.22044605e-16 0,2.23857625 0,5 L0,5 Z"
          />
        </svg>
      </div>
      <div
        className=
            ms-ShimmerGap-root
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              background-color: #ffffff;
              border-bottom-style: solid;
              border-bottom-width: 7px;
              border-color: #ffffff;
              border-top-style: solid;
              border-top-width: 7px;
              box-sizing: content-box;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 16px;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              background-color: Window;
              border-color: Window;
            }
        style={
          Object {
            "minWidth": "auto",
            "width": "2%",
          }
        }
      />
      <div
        className=
            ms-ShimmerLine-root
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              border-bottom-style: solid;
              border-bottom-width: 5px;
              border-color: #ffffff;
              border-top-style: solid;
              border-top-width: 5px;
              border-width: 0px;
              box-sizing: content-box;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              height: 20px;
              position: relative;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
              border-color: Window;
            }
            @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& > * {
              fill: Window;
            }
        style={
          Object {
            "minWidth": "auto",
            "width": "100%",
          }
        }
      >
        <svg
          className=
              ms-ShimmerLine-topLeftCorner
              {
                fill: #ffffff;
                left: 0;
                position: absolute;
                top: 0;
              }
          height="2"
          width="2"
        >
          <path
            d="M0 2 A 2 2, 0, 0, 1, 2 0 L 0 0 Z"
          />
        </svg>
        <svg
          className=
              ms-ShimmerLine-topRightCorner
              {
                fill: #ffffff;
                position: absolute;
                right: 0;
                top: 0;
              }
          height="2"
          width="2"
        >
          <path
            d="M0 0 A 2 2, 0, 0, 1, 2 2 L 2 0 Z"
          />
        </svg>
        <svg
          className=
              ms-ShimmerLine-bottomRightCorner
              {
                bottom: 0;
                fill: #ffffff;
                position: absolute;
                right: 0;
              }
          height="2"
          width="2"
        >
          <path
            d="M2 0 A 2 2, 0, 0, 1, 0 2 L 2 2 Z"
          />
        </svg>
        <svg
          className=
              ms-ShimmerLine-bottomLeftCorner
              {
                bottom: 0;
                fill: #ffffff;
                left: 0;
                position: absolute;
              }
          height="2"
          width="2"
        >
          <path
            d="M2 2 A 2 2, 0, 0, 1, 0 0 L 0 2 Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`Shimmer renders Shimmer with custom elements correctly 1`] = `
<div
  className=
      ms-Shimmer-container
      {
        -moz-osx-font-smoothing: grayscale;
        -webkit-font-smoothing: antialiased;
        font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
        font-size: 14px;
        font-weight: 400;
        height: auto;
        position: relative;
      }
>
  <div
    className=
        ms-Shimmer-shimmerWrapper
        {
          background-color: #f3f2f1;
          overflow: hidden;
          position: relative;
          transform: translateZ(0);
          transition: opacity 200ms;
        }
        @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
          -ms-high-contrast-adjust: none;
          background: WindowText
                                linear-gradient(
                                  to right,
                                  transparent 0%,
                                  Window 50%,
                                  transparent 100%)
                                0 0 / 90% 100%
                                no-repeat;
          forced-color-adjust: none;
        }
        & > * {
          transform: translateZ(0);
        }
    style={
      Object {
        "width": 350,
      }
    }
  >
    <div
      className=
          ms-Shimmer-shimmerGradient
          {
            animation-direction: normal;
            animation-duration: 2s;
            animation-iteration-count: infinite;
            animation-name: keyframes 0%{transform:translateX(-100%);}100%{transform:translateX(100%);};
            animation-timing-function: ease-in-out;
            background: #f3f2f1
                                linear-gradient(
                                  to right,
                                  #f3f2f1 0%,
                                  #edebe9 50%,
                                  #f3f2f1 100%)
                                0 0 / 90% 100%
                                no-repeat;
            height: 100%;
            left: 0px;
            position: absolute;
            top: 0px;
            transform: translateX(-100%);
            width: 100%;
          }
    />
    <div
      style={
        Object {
          "display": "flex",
        }
      }
    >
      <div
        className=
            ms-ShimmerElementsGroup-root
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              display: flex;
              flex-wrap: nowrap;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              position: relative;
            }
        style={
          Object {
            "width": "auto",
          }
        }
      >
        <div
          className=
              ms-ShimmerLine-root
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                border-bottom-style: solid;
                border-bottom-width: 0px;
                border-color: #ffffff;
                border-top-style: solid;
                border-top-width: 0px;
                border-width: 0px;
                box-sizing: content-box;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 40px;
                position: relative;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                border-color: Window;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& > * {
                fill: Window;
              }
          style={
            Object {
              "minWidth": "40px",
              "width": 40,
            }
          }
        >
          <svg
            className=
                ms-ShimmerLine-topLeftCorner
                {
                  fill: #ffffff;
                  left: 0;
                  position: absolute;
                  top: 0;
                }
            height="2"
            width="2"
          >
            <path
              d="M0 2 A 2 2, 0, 0, 1, 2 0 L 0 0 Z"
            />
          </svg>
          <svg
            className=
                ms-ShimmerLine-topRightCorner
                {
                  fill: #ffffff;
                  position: absolute;
                  right: 0;
                  top: 0;
                }
            height="2"
            width="2"
          >
            <path
              d="M0 0 A 2 2, 0, 0, 1, 2 2 L 2 0 Z"
            />
          </svg>
          <svg
            className=
                ms-ShimmerLine-bottomRightCorner
                {
                  bottom: 0;
                  fill: #ffffff;
                  position: absolute;
                  right: 0;
                }
            height="2"
            width="2"
          >
            <path
              d="M2 0 A 2 2, 0, 0, 1, 0 2 L 2 2 Z"
            />
          </svg>
          <svg
            className=
                ms-ShimmerLine-bottomLeftCorner
                {
                  bottom: 0;
                  fill: #ffffff;
                  left: 0;
                  position: absolute;
                }
            height="2"
            width="2"
          >
            <path
              d="M2 2 A 2 2, 0, 0, 1, 0 0 L 0 2 Z"
            />
          </svg>
        </div>
        <div
          className=
              ms-ShimmerGap-root
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                background-color: #ffffff;
                border-bottom-style: solid;
                border-bottom-width: 0px;
                border-color: #ffffff;
                border-top-style: solid;
                border-top-width: 0px;
                box-sizing: content-box;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 40px;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                background-color: Window;
                border-color: Window;
              }
          style={
            Object {
              "minWidth": "10px",
              "width": 10,
            }
          }
        />
      </div>
      <div
        className=
            ms-ShimmerElementsGroup-root
            {
              -moz-osx-font-smoothing: grayscale;
              -webkit-font-smoothing: antialiased;
              align-items: center;
              display: flex;
              flex-wrap: wrap;
              font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
              font-size: 14px;
              font-weight: 400;
              position: relative;
            }
        style={
          Object {
            "width": "auto",
          }
        }
      >
        <div
          className=
              ms-ShimmerLine-root
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                border-bottom-style: solid;
                border-bottom-width: 5px;
                border-color: #ffffff;
                border-top-style: solid;
                border-top-width: 5px;
                border-width: 0px;
                box-sizing: content-box;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 10px;
                position: relative;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                border-color: Window;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& > * {
                fill: Window;
              }
          style={
            Object {
              "minWidth": "300px",
              "width": 300,
            }
          }
        >
          <svg
            className=
                ms-ShimmerLine-topLeftCorner
                {
                  fill: #ffffff;
                  left: 0;
                  position: absolute;
                  top: 0;
                }
            height="2"
            width="2"
          >
            <path
              d="M0 2 A 2 2, 0, 0, 1, 2 0 L 0 0 Z"
            />
          </svg>
          <svg
            className=
                ms-ShimmerLine-topRightCorner
                {
                  fill: #ffffff;
                  position: absolute;
                  right: 0;
                  top: 0;
                }
            height="2"
            width="2"
          >
            <path
              d="M0 0 A 2 2, 0, 0, 1, 2 2 L 2 0 Z"
            />
          </svg>
          <svg
            className=
                ms-ShimmerLine-bottomRightCorner
                {
                  bottom: 0;
                  fill: #ffffff;
                  position: absolute;
                  right: 0;
                }
            height="2"
            width="2"
          >
            <path
              d="M2 0 A 2 2, 0, 0, 1, 0 2 L 2 2 Z"
            />
          </svg>
          <svg
            className=
                ms-ShimmerLine-bottomLeftCorner
                {
                  bottom: 0;
                  fill: #ffffff;
                  left: 0;
                  position: absolute;
                }
            height="2"
            width="2"
          >
            <path
              d="M2 2 A 2 2, 0, 0, 1, 0 0 L 0 2 Z"
            />
          </svg>
        </div>
        <div
          className=
              ms-ShimmerLine-root
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                border-bottom-style: solid;
                border-bottom-width: 5px;
                border-color: #ffffff;
                border-top-style: solid;
                border-top-width: 5px;
                border-width: 0px;
                box-sizing: content-box;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 10px;
                position: relative;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                border-color: Window;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& > * {
                fill: Window;
              }
          style={
            Object {
              "minWidth": "200px",
              "width": 200,
            }
          }
        >
          <svg
            className=
                ms-ShimmerLine-topLeftCorner
                {
                  fill: #ffffff;
                  left: 0;
                  position: absolute;
                  top: 0;
                }
            height="2"
            width="2"
          >
            <path
              d="M0 2 A 2 2, 0, 0, 1, 2 0 L 0 0 Z"
            />
          </svg>
          <svg
            className=
                ms-ShimmerLine-topRightCorner
                {
                  fill: #ffffff;
                  position: absolute;
                  right: 0;
                  top: 0;
                }
            height="2"
            width="2"
          >
            <path
              d="M0 0 A 2 2, 0, 0, 1, 2 2 L 2 0 Z"
            />
          </svg>
          <svg
            className=
                ms-ShimmerLine-bottomRightCorner
                {
                  bottom: 0;
                  fill: #ffffff;
                  position: absolute;
                  right: 0;
                }
            height="2"
            width="2"
          >
            <path
              d="M2 0 A 2 2, 0, 0, 1, 0 2 L 2 2 Z"
            />
          </svg>
          <svg
            className=
                ms-ShimmerLine-bottomLeftCorner
                {
                  bottom: 0;
                  fill: #ffffff;
                  left: 0;
                  position: absolute;
                }
            height="2"
            width="2"
          >
            <path
              d="M2 2 A 2 2, 0, 0, 1, 0 0 L 0 2 Z"
            />
          </svg>
        </div>
        <div
          className=
              ms-ShimmerGap-root
              {
                -moz-osx-font-smoothing: grayscale;
                -webkit-font-smoothing: antialiased;
                background-color: #ffffff;
                border-bottom-style: solid;
                border-bottom-width: 0px;
                border-color: #ffffff;
                border-top-style: solid;
                border-top-width: 0px;
                box-sizing: content-box;
                font-family: 'Segoe UI', 'Segoe UI Web (West European)', 'Segoe UI', -apple-system, BlinkMacSystemFont, 'Roboto', 'Helvetica Neue', sans-serif;
                font-size: 14px;
                font-weight: 400;
                height: 20px;
              }
              @media screen and (-ms-high-contrast: active), screen and (forced-colors: active){& {
                background-color: Window;
                border-color: Window;
              }
          style={
            Object {
              "minWidth": "100px",
              "width": 100,
            }
          }
        />
      </div>
    </div>
  </div>
</div>
`;
